adding codepen link

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1185,8 +1185,7 @@ h2 {
     color: #00A1D3 !important; /* 2D7BB6, 4A90E2 */
 }
 
-/* probably needs to be more specific, like with a class selector, in case there are other links inside #item that are not code (or those exceptions could just be handled with a class of .notcode */
-#item a {
+.code {
     font-family: inconsolatamedium, consolas, monospace;
 }
 
