--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -48,7 +48,7 @@ slug: /
 
     <div id="credits" tabindex='-1'>
         <i>(click or press to interact)</i><br>
-        CC Fest, September 23, UCLA<br>
+        CC Fest, November 12, NYU ITP<br>
         <a href="http://ccfest.rocks/" target="_blank">More details here!</a>
     </div>
 
