--- a/src/templates/pages/libraries/index.hbs
+++ b/src/templates/pages/libraries/index.hbs
@@ -196,6 +196,15 @@ slug: libraries/
         <p>{{#i18n "p5.scenemanager"}}{{/i18n}}<a target='_blank' href='https://github.com/mveteanu/'>Marian Veteanu</a>.</p>
       </div>
 
+      <div class="right-column">
+        <a class="nounderline" href="https://github.com/cvalenzuela/Mappa">
+        <div class="label">
+        <img src="{{assets}}/img/libraries/mappa.png"></a>
+        <a class="nounderline" href="https://github.com/cvalenzuela/Mappa"><h4>mappa.js</h4></a>
+        </div>
+        <p>{{#i18n "mappa.js"}}{{/i18n}}<a href='https://github.com/cvalenzuela/'>Crist&#xf3;bal Valenzuela</a>.</p>
+      </div>
+
       <div class="spacer"></div>
 
       <a name="using-a-library" class="anchor">
