add mappa.js library

--- a/src/templates/pages/libraries/index.hbs
+++ b/src/templates/pages/libraries/index.hbs
@@ -202,7 +202,7 @@ slug: libraries/
         <img src="{{assets}}/img/libraries/mappa.png"></a>
         <a class="nounderline" href="https://github.com/cvalenzuela/Mappa"><h4>mappa.js</h4></a>
         </div>
-        <p>{{#i18n "mappa.js"}}{{/i18n}}<a href='https://github.com/cvalenzuela/'>Crist&#xf3;bal Valenzuela</a>.</p>
+        <p>{{#i18n "mappa"}}{{/i18n}}<a href='https://github.com/cvalenzuela/'>Crist&#xf3;bal Valenzuela</a>.</p>
       </div>
 
       <div class="spacer"></div>
