--- a/src/templates/pages/libraries/index.hbs
+++ b/src/templates/pages/libraries/index.hbs
@@ -207,6 +207,26 @@ slug: libraries/
 
       <div class="spacer"></div>
 
+      <div class="left-column">
+        <a class="nounderline" href="https://idmnyu.github.io/p5.js-func/">
+        <div class="label">
+        <img src="{{assets}}/img/libraries/p5.func.jpg"></a>
+        <a class="nounderline" href="https://idmnyu.github.io/p5.js-func/"><h4>p5.func</h4></a>
+        </div>
+        <p>{{#i18n "p5.func"}}{{/i18n}}<a target='_blank' href='http://lukedubois.com/'>R. Luke DuBois</a>.</p>
+      </div>
+
+<!--       <div class="right-column">
+        <a class="nounderline" href="https://github.com/cvalenzuela/Mappa">
+        <div class="label">
+        <img src="{{assets}}/img/libraries/mappa.png"></a>
+        <a class="nounderline" href="https://github.com/cvalenzuela/Mappa"><h4>mappa.js</h4></a>
+        </div>
+        <p>{{#i18n "mappa"}}{{/i18n}}<a href='https://github.com/cvalenzuela/'>Crist&#xf3;bal Valenzuela</a>.</p>
+      </div> -->
+
+      <div class="spacer"></div>
+
       <a name="using-a-library" class="anchor">
         <h2>{{#i18n "using-a-library-title"}}{{/i18n}}</h2>
       </a>
