--- a/src/templates/pages/download/index.hbs
+++ b/src/templates/pages/download/index.hbs
@@ -13,9 +13,9 @@ slug: download/
 
       <h1>{{#i18n "Download"}}{{/i18n}}</h1>
 
-      <!-- <p>{{#i18n "Donate-1"}}{{/i18n}}<a href="http://foundation.processing.org">Processing Foundation</a>,{{#i18n "Donate-2"}}{{/i18n}}<br>
+      <p>{{#i18n "Donate-1"}}{{/i18n}}<a href="http://foundation.processing.org">Processing Foundation</a>{{#i18n "Donate-2"}}{{/i18n}}<br>
       <a href="https://processingfoundation.org/support">{{#i18n "Donate-3"}}{{/i18n}}</a>
-      </p> -->
+      </p>
 
       <!-- COMPLETE LIBRARY -->
       <div class="link_group">
@@ -148,7 +148,7 @@ slug: download/
       $('.support_link').on('click', function (e) {
         e.preventDefault();
         // if ($(this).hasClass('p5_link')) {
-        //   window.open($(this).attr('href'), '_self'); 
+        //   window.open($(this).attr('href'), '_self');
         //   setTimeout( function() { window.location = 'support.html'; }, 2000);
         // } else {
           window.location = 'support.html';
