--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1738,10 +1738,11 @@ footer {
         /*float:left;*/
         border-top: transparent;
         border-bottom: transparent;
-        height: 14.25em;
         padding:1.25em 0;
         font-size: 0.92em;
         z-index: 100;
+        position: relative;
+        top: 0;
     }
 
     #menu li {
