add p5.accessibility library under libraries

--- a/src/templates/pages/libraries/index.hbs
+++ b/src/templates/pages/libraries/index.hbs
@@ -31,6 +31,18 @@ slug: libraries/
         </div>
         <p>{{#i18n "p5.sound"}}{{/i18n}}</p>
       </div>
+      
+      <div class="spacer"></div>
+
+      <div class="left-column">
+        <a class="nounderline" href="https://github.com/processing/p5.accessibility">
+        <div class="label">
+        <img src="{{assets}}/img/libraries/p5.acc.png"></a>
+        <a class="nounderline" href="https://github.com/processing/p5.accessibility">
+          <h4>p5.accessibility</h4></a>
+        </div>
+        <p>{{#i18n "p5.accessibility"}}{{/i18n}}</p>
+      </div>
 
       <div class="spacer"></div>
 
