fix to css for ref page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -273,7 +273,7 @@
   //////////////////////////////////////////////////
 */
 
-#reference section h1 {
+#reference-page section h1 {
   float:left;
 }
 
