--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -47,7 +47,7 @@ slug: /
 
     <div id="credits" tabindex='-1'>
         <i>Shan Shui II</i> {{#i18n "sketch_by"}}{{/i18n}} <a href="http://www.qianqian-ye.com/" target="_blank">Qianqian Ye</a><br>
-        <!-- <a href="#" target="_blank">{{#i18n "sketch_info"}}{{/i18n}}</a><br> -->
+        <a href='{{#i18n "sketch_info_link"}}{{/i18n}}' target="_blank">{{#i18n "sketch_info"}}{{/i18n}}</a><br>
     </div>
 
 
