hiding toggle text outputbutton in examples

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -959,6 +959,12 @@ variable */
 }
 
 
+/* p5.accessibility */
+.textoutput_button {
+  position: absolute;
+  left: -9999px;
+}
+
 /*
   //////////////////////////////////////////////////
     GALLERY
